--- a/src/locales/translation/ar.json
+++ b/src/locales/translation/ar.json
@@ -1,13 +1,20 @@
 {
   "lang": "ar",
-  "home": {
-    "a": {
-      "": "",
-      "": ""
-    },
-    "b": {
-      "": "",
-      "": ""
-    }
-  }
+  "table": "الجداول",
+  "inputs": "المدخلات",
+  "heads": "العناوين",
+  "buttons": "الأزرار",
+  "components": "المكونات",
+  "topics": "المواضيع",
+  "folderStructure": "تكوين المجلدات",
+  "globalState": "الحالات العامة",
+  "routingLayouts": "روابط وتخطيطات",
+  "services": "الخدمات",
+  "unitTest": "اختبار الوحدة",
+  "home": "الرئيسية",
+  "home": "الرئيسية",
+  "home": "الرئيسية",
+  "home": "الرئيسية",
+  "home": "الرئيسية",
+  "home": "الرئيسية"
 }
