--- a/src/locales/translation/ar.json
+++ b/src/locales/translation/ar.json
@@ -6,6 +6,7 @@
   "buttons": "الأزرار",
   "components": "المكونات",
   "topics": "المواضيع",
+  "auth": "التأمين",
   "folderStructure": "تكوين المجلدات",
   "globalState": "الحالات العامة",
   "routingLayouts": "روابط وتخطيطات",
