--- a/src/locales/translation/ar.json
+++ b/src/locales/translation/ar.json
@@ -5,6 +5,7 @@
   "heads": "العناوين",
   "buttons": "الأزرار",
   "components": "المكونات",
+  "alerts": "التنبيهات",
   "topics": "المواضيع",
   "auth": "التأمين",
   "folderStructure": "تكوين المجلدات",
