--- a/src/locales/translation/en.json
+++ b/src/locales/translation/en.json
@@ -5,6 +5,7 @@
   "heads": "Heads",
   "buttons": "Buttons",
   "components": "Components",
+  "alerts": "Alerts",
   "topics": "Topics",
   "auth": "Authantication",
   "folderStructure": "Folder Structure",
