--- a/src/locales/translation/ar.json
+++ b/src/locales/translation/ar.json
@@ -13,7 +13,7 @@
   "routingLayouts": "روابط وتخطيطات",
   "services": "الخدمات",
   "unitTest": "اختبار الوحدة",
-  "home": "الرئيسية",
+  "imgUploader": "رافع الصور",
   "home": "الرئيسية",
   "home": "الرئيسية",
   "home": "الرئيسية",
