--- a/src/locales/translation/en.json
+++ b/src/locales/translation/en.json
@@ -13,7 +13,7 @@
   "routingLayouts": "Routing & Layouts",
   "services": "Services (API)",
   "unitTest": "Unit Test",
-  "home": "الرئيسية",
+  "imgUploader": "Image Uploader",
   "home": "الرئيسية",
   "home": "الرئيسية",
   "home": "الرئيسية",
