--- a/src/locales/translation/ar.json
+++ b/src/locales/translation/ar.json
@@ -14,7 +14,7 @@
   "services": "الخدمات",
   "unitTest": "اختبار الوحدة",
   "imgUploader": "رافع الصور",
-  "home": "الرئيسية",
+  "serviceWorker": "مشغل الخدمة",
   "home": "الرئيسية",
   "home": "الرئيسية",
   "home": "الرئيسية",
