--- a/src/locales/translation/en.json
+++ b/src/locales/translation/en.json
@@ -14,7 +14,7 @@
   "services": "Services (API)",
   "unitTest": "Unit Test",
   "imgUploader": "Image Uploader",
-  "home": "الرئيسية",
+  "serviceWorker": "Service Worker",
   "home": "الرئيسية",
   "home": "الرئيسية",
   "home": "الرئيسية",
