--- a/src/locales/translation/ar.json
+++ b/src/locales/translation/ar.json
@@ -15,7 +15,7 @@
   "unitTest": "اختبار الوحدة",
   "imgUploader": "رافع الصور",
   "serviceWorker": "مشغل الخدمة",
-  "home": "الرئيسية",
+  "webpack": "التكوين",
   "home": "الرئيسية",
   "home": "الرئيسية",
   "home": "الرئيسية"
