--- a/src/locales/translation/en.json
+++ b/src/locales/translation/en.json
@@ -15,7 +15,7 @@
   "unitTest": "Unit Test",
   "imgUploader": "Image Uploader",
   "serviceWorker": "Service Worker",
-  "home": "الرئيسية",
+  "webpack": "Webpack",
   "home": "الرئيسية",
   "home": "الرئيسية",
   "home": "الرئيسية",
